--- a/css/waleed.css
+++ b/css/waleed.css
@@ -106,7 +106,7 @@ width: 150px;
   right: 0px;
   top: 0px;
   position: fixed;
-  background-color: red;
+/*  background-color: red;*/
   height: 150px;
   width: 100%;
     z-index:2;
@@ -119,7 +119,7 @@ width: 150px;
   padding: 10px;
   z-index:1;
   position: relative;
- background-color: green;
+ /*background-color: green;*/
 }
 #bh{
   background-color: blue;
